--- a/art/tsconfig.json
+++ b/art/tsconfig.json
@@ -20,7 +20,8 @@
 		},
 		"noImplicitThis": false,
 		"noImplicitAny": false,
-		"allowImportingTsExtensions": true
+		"allowImportingTsExtensions": true,
+        "lib": ["ES2017"],
     }
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
